Support pulling Ollama LLM model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
         "korahd",
+        "ollama",
         "qwen",
+        "reqwest",
         "rusqlite",
+        "serde",
         "thiserror"
     ]
 }
