--- a/korahd/Cargo.toml
+++ b/korahd/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 clap = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
+reqwest = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-rusqlite = { workspace = true }
