--- a/korahd/Cargo.toml
+++ b/korahd/Cargo.toml
@@ -11,6 +11,7 @@ env_logger = { workspace = true }
 futures = { workspace = true }
 log = { workspace = true }
 reqwest = { workspace = true }
+schemars = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
