Add a query handler and make it call Ollama

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,12 @@
     "cSpell.words": [
         "korahd",
         "ollama",
-        "oneshot",
         "qwen",
         "reqwest",
         "rusqlite",
         "schemars",
         "serde",
+        "strfmt",
         "thiserror"
     ]
 }
