--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,10 @@ reqwest = { features = ["json"], version = "0.12.12" }
 schemars = "0.8.21"
 serde = { features = ["derive"], version = "1.0.217" }
 serde_json = { features = ["raw_value"], version = "1.0.134" }
+strfmt = "0.2.4"
+sys-locale = "0.3.2"
 thiserror = "2.0.9"
 tokio = { features = ["macros", "rt-multi-thread"], version = "1.42.0" }
 tokio-rusqlite = "0.6.0"
 tokio-stream = "0.1.17"
+whoami = "1.5.2"
