--- a/korahd/Cargo.toml
+++ b/korahd/Cargo.toml
@@ -14,7 +14,10 @@ reqwest = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+strfmt = { workspace = true }
+sys-locale = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-rusqlite = { workspace = true }
 tokio-stream = { workspace = true }
+whoami = { workspace = true }
