Expand env in FindFilesParams::in_directory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "qwen",
         "schemars",
         "serde",
+        "shellexpand",
+        "Shellexpend",
         "strfmt",
         "thiserror",
         "ureq",
