--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ regex = "1.11.1"
 schemars = { features = ["chrono"], version = "0.8.21" }
 serde = { features = ["derive"], version = "1.0.217" }
 serde_json = { features = ["raw_value"], version = "1.0.134" }
+shellexpand = { features = ["path"], version = "3.1.0" }
 strfmt = "0.2.4"
 sys-locale = "0.3.2"
 thiserror = "2.0.11"
