Add find_processes tool

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "shellexpand",
         "Shellexpend",
         "strfmt",
+        "sysinfo",
         "thiserror",
         "ureq",
         "USERPROFILE"
