--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ clap = { features = ["derive", "env", "string"], version = "4.5.23" }
 ctrlc = "3.4.5"
 env_logger = "0.11.6"
 log = { features = ["serde"], version = "0.4.22" }
+netstat2 = "0.11.1"
 regex = "1.11.1"
 schemars = { features = ["chrono"], version = "0.8.21" }
 serde = { features = ["derive"], version = "1.0.217" }
