--- a/korah.toml
+++ b/korah.toml
@@ -7,3 +7,8 @@ query_fmt = "Using the context {context} derive a tool call for the following qu
 [llm.ollama]
 base_url = "http://localhost:11434"
 model = "qwen2.5"
+
+[llm.open_ai]
+base_url = "https://api.openai.com/v1"
+key = "$OPENAI_API_KEY"
+model = "gpt-4o-mini"
