--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 chrono = { features = ["serde"], version = "0.4.39" }
 clap = { features = ["derive", "env", "string"], version = "4.5.23" }
 ctrlc = "3.4.5"
+either = "1.13.0"
 env_logger = "0.11.6"
 log = { features = ["serde"], version = "0.4.22" }
 netstat2 = "0.11.1"
