Add Ollama and OpenAI options

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
         "chrono",
         "Golbert",
         "korah",
+        "mirostat",
+        "mlock",
+        "mmap",
+        "numa",
         "Ollama",
         "pids",
         "qwen",
